2017-07-31  Sam Steingold  <sds@gnu.org>

	* mop.tst (with-collecting-mop-warnings): replaces
	with-counting-mop-warnings for testing rfe#52

2017-07-31  Sam Steingold  <sds@gnu.org>

	* mop.tst (with-counting-mop-warnings): extract from a test and
	split the test in two

2017-07-31  Sam Steingold  <sds@gnu.org>

	* tests.lisp (symbols-cleanup): add
	* conditions.tst, eval20.tst, ext-clisp.tst, format.tst:
	* hashlong.tst, iofkts.tst, macro8.tst, map.tst, mop.tst, mt.tst:
	* number2.tst, path.tst, restarts.tst, setf.tst, steele7.tst:
	* streams.tst, streamslong.tst, symbol10.tst, tests.lisp, type.tst:
	* unportable.tst, weakhash.tst, weakptr.tst: use it

2017-07-17  Sam Steingold  <sds@gnu.org>

	* streamslong.tst: test CLOS:GF-ALREADY-CALLED-WARNING on Gray streams

2017-03-14  Sam Steingold  <sds@gnu.org>

	* streams.tst: bind *reopen-open-file* to nil when copying stdout
	- it could be a file

2017-03-08  Sam Steingold  <sds@gnu.org>

	* streams.tst, path.tst: Add tests for bug#679.

2016-11-10  Bruno Haible  <bruno@clisp.org>

	Update expected test results for memory model GENERIC64_HEAPCODES.
	* alltest.tst: Update tests of most-positive-fixnum and
	most-negative-fixnum.

2016-08-29  Sam Steingold  <sds@gnu.org>

	* path.tst: test (compile-file-pathname LOGICAL PHYSICAL) (bug#677)

2016-08-29  Sam Steingold  <sds@gnu.org>

	* socket.tst: adapted for MacOSX idiosyncrasies

2016-08-11  Sam Steingold  <sds@gnu.org>

	* pack11.tst: cerror_package_locked can trigger GC

2012-04-23  Sam Steingold  <sds@gnu.org>

	* format.tst: add tests for binding of *FORMAT-CS* [bug#631]

2012-04-23  Sam Steingold  <sds@gnu.org>

	* excepsit.tst: add tests for APPLY on dotted lists [bug#636]

2012-04-23  Sam Steingold  <sds@gnu.org>

	* excepsit.tst: check that LOGICAL-PATHNAME-TRANSLATIONS signals
	a TYPE-ERROR on a STRING too [bug#638]

2012-02-14  Vladimir Tzankov  <vtzankov@gmail.com>

	* array.tst: ARRAY-DIMENSION-LIMIT & ARRAY-TOTAL-SIZE-LIMIT tests